[package]
name = "rust-arduino-temp"
version = "0.1.0"
authors = ["Jay Vana <jaysvana@gmail.com>"]
edition = "2018"

[dependencies]
nb = "0.1.2"
panic-halt = "0.2.0"
ufmt = "0.1.0"

[dependencies.arduino-uno]
git = "https://github.com/rahix/avr-hal"
rev = "e5a24cb5c42ef44f7742f14d42dde6c1a26ce9b0"

[dev-dependencies]
nb = "0.1.2"

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[target.'cfg(target_arch = "avr")']
runner = "./uno-runner.sh"
